# NeighborhoodMatcher

./: .gitignore  HANDOFF.md  README.md  netlify.toml  pyproject.toml  spring-2026-wiki-entry.md
.claude/: launch.json
.github/workflows/: python-app.yml  python-tests.yml  r-tests.yml  unittests.yml
acs_matcher/: __init__.py  match_participants.py
apps/dataset-merge/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
matcher/analysis/: benchmark_simulated.py
matcher/docs/: README.md  architecture.md  explanatory.md  (+2 more)
r/: DESCRIPTION
simulated_data/: dataset_A100.csv  dataset_A10000.csv  dataset_A20.csv  dataset_A20_decimals_dropped.csv  dataset_A20_zscored.csv  dataset_B_tracts.csv  duplicate_detail_A20.csv  gradient_A100.csv  gradient_A10000.csv  match_results.xlsx  readme.docx  results_A100.csv  results_A10000.csv  results_A20.csv  results_A20_decimals_dropped.csv  results_A20_zscored.csv  simulated_datasets.xlsx  summary_A100.csv  summary_A10000.csv  summary_A20.csv  summary_A20_decimals_dropped.csv  summary_A20_zscored.csv  truth_A100.csv  truth_A10000.csv  truth_A20.csv
testing/: testing_function.py
tests/: test_match_participants.py
version-1/: README.md
version-1/python/: README.md  pyproject.toml
version-1/python/acs_matcher/: __init__.py
version-2/: README.md
version-3/: .gitignore  pyproject.toml
version-3/analysis/: benchmark_simulated.py  nndr_calibration.py  perturb.py
version-3/data/acs-test/perturbed/: dataseta_noise_010pct.csv  dataseta_noise_025pct.csv  dataseta_noise_050pct.csv
version-3/data/dexter-test/: sample id.csv
version-3/docs/: README.md  architecture.md  explanatory.md  output_format.md  testing.md
version-3/docs/old-planning/: pm_presentation.md
version-3/docs/signals/: README.md  cascading_nndr.md  flags.md  per_row_feature_contribution.md
version-3/explanatory/: base_pool.py  build.py  template.tex.j2
version-3/explanatory/scenarios/: ambiguous_match.py  exact_match.py  mnn_not_confirmed.py  rounding_discrepancy.py  scale_mismatch.py
version-3/src/matcher/: align.py  distance.py  pipeline.py  signals.py  standardize.py  web_api.py
version-3/src/matcher.egg-info/: PKG-INFO  SOURCES.txt
version-3/tests/: test_align.py  test_distance.py  test_io.py  test_match_all.py  test_merge.py  test_pipeline.py  test_signals.py  test_standardize.py  test_web_api_shards.py
version-3/tests/signals/: test_cascading_nndr.py  test_per_row_feature_contribution.py
webapp/: README.md  index.html  netlify.toml  pnpm-lock.yaml
(+94 files in other folders)
