[project]
name = "acs-matcher"                   # what people will `uv add`
version = "0.1.0"
description = "Match participant-level CSVs to ACS tracts and transfer a new feature."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]

# non-stdlib dependencies your code imports
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.urls]
Homepage = "https://github.com/yourname/acs_matcher"
Repository = "https://github.com/yourname/acs_matcher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
