[project]
name = "acs-matcher"                   # what people will `uv add`
version = "0.1.0"
description = "Match participant-level CSVs to ACS tracts and transfer a new feature."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Atharva Beesen", email = "atharva.beesen@gmail.com" }
]

# non-stdlib dependencies your code imports
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0"
]

[project.urls]
Homepage = "https://github.com/SustainableUrbanSystemsLab/NeighborhoodMatcher/acs_matcher"
Repository = "https://github.com/SustainableUrbanSystemsLab/NeighborhoodMatcher/acs_matcher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

