[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matcher"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "jinja2"]

[dependency-groups]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
